Issue #28333: Remove unnecessary increment.